tests/NormalTests/paczka1/fuzzy1/86913104.err
Error in line 5: 0hNCu A716 87,2
Error in line 10: aTGkZhs A716 7,6
Error in line 26: aTGkZhs A716 2,5
Error in line 19: butYtDD A472 54,9
Error in line 35: 0hNCu A374 23,8
